# pylluminator

./: .gitignore  .readthedocs.yaml  README.rst  annotations.py  cnv.py  detection.py  dm.py  environment.yml  idat.py  preprocessing.py  pyproject.toml  quality_control.py  requirements.txt  sample.py  sample_sheet.py  stats.py  utils.py
.github/workflows/: run_test.yml
data/genomes/hg19/: gap_info.csv
data/genomes/hg38/: seq_length.csv
data/genomes/mm10/: seq_length.csv
data/genomes/mm39/: seq_length.csv
docs/: annotations.md  annotations.rst  api.rst  conf.py  index.rst  tutorials.rst  usage.rst
docs/_templates/: custom-class-template.rst  custom-module-template.rst
docs/tutorials/: 1 - Read data and get betas.ipynb  2 - QC.ipynb  3 - Calculate DMP and DMR.ipynb  3 - DMPs and DMRs.ipynb  4 - Copy Number Variation (CNV).ipynb  4 - Copy Number Variation.ipynb  5 - Gene set enrichment analysis.ipynb  5 - Pathway analysis.ipynb
illuminator/: annotations.py  cnv.py  dm.py  quality_control.py  read_idat.py  sample.py  sample_sheet.py  samples.py  stats.py  utils.py  visualizations.py
illuminator/data/annotations/default/hg19/genome_info/: seq_length.csv
illuminator/data/annotations/default/hg38/genome_info/: gap_info.csv
illuminator/data/annotations/default/mm10/genome_info/: gap_info.csv
illuminator/data/annotations/default/mm39/genome_info/: gap_info.csv
illuminator/data/genomes/hg19/: cyto_band.csv
illuminator/data/genomes/hg38/: cen_info.csv  cyto_band.csv
illuminator/data/genomes/mm10/: cyto_band.csv
illuminator/data/genomes/mm39/: cyto_band.csv
methylator/: annotations.py  cnv.py  dm.py  quality_control.py  read_idat.py  sample.py  sample_sheet.py  utils.py
pylluminator/: annotations.py  cnv.py  dm.py  mask.py  ml.py  quality_control.py  sample.py  sample_sheet.py  samples.py  stats.py  utils.py  visualizations.py
tests/: conftest.py  test_betas.py  test_cnv.py  test_dm.py  test_mask.py  test_preprocessing.py  test_read_samples.py  test_sample_sheet.py  test_samples.py  test_stats.py  test_utils.py  test_visualizations.py
tutorials/: 1 - Read data and get betas.ipynb  2 - Calculate DMP and DMR.ipynb  2 - QC.ipynb  3 - Calculate DMP and DMR.ipynb  3 - Copy Number Variation (CNV).ipynb  4 - Copy Number Variation (CNV).ipynb  5 - Visualize genes.ipynb
